<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backHome"
    android:orientation="vertical"
    tools:context=".DepositActivity">

    <TextView
        style="@style/TextView_form"
        android:text="@string/deposit"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <TextView
        android:layout_marginTop="30dp"
        style="@style/TextView_form"
        android:text="@string/text_input_deposit_value"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/edit_deposit"
        android:drawableStart="@drawable/custom_real_icon"
        android:inputType="number"
        tools:text="50"
        android:textStyle="bold"
        android:textSize="22sp"
        style="@style/EditText_form"/>

    <Button
        android:id="@+id/btn_deposit"
        style="@style/Button_form"
        android:text="@string/btn_deposit"
        app:backgroundTint="@color/secondary"/>
</LinearLayout>