<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backHome"
    tools:context=".ExtractActivity">

    <TextView
        style="@style/Title_Screen"
        android:text="@string/title_extract" />


    <TextView
        style="@style/TextView_form"
        android:background="@drawable/title_balance"
        android:layout_width="match_parent"
        android:paddingTop="5dp"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_marginHorizontal="20dp"
        android:text="@string/title_balance"
        android:layout_height="30dp"/>

    <TextView
        android:id="@+id/extract_balance"
        style="@style/TextView_form"
        android:background="@drawable/button_extract"
        android:text="@string/text_balance"
        android:paddingTop="5dp"
        android:paddingStart="10dp"
        android:textStyle="bold"
        android:textSize="25sp"
        tools:text="R$ 50,00"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_extract"
        android:layout_marginTop="10dp"
        tools:listitem="@layout/extract_item"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>