<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backHome"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/logo_bank"
        android:layout_width="79dp"
        android:layout_height="54dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_bank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/view_name"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:text="@string/name_current_user"
        tools:text="DLS"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/logo_bank"
        android:layout_height="40dp" />

    <TextView
        android:id="@+id/balance_top"
        android:background="@drawable/title_balance"
        android:layout_width="match_parent"
        android:paddingTop="5dp"
        android:paddingStart="10dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_marginHorizontal="20dp"
        android:text="@string/title_balance"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_name"/>

    <TextView
        android:id="@+id/view_balance"
        android:text="@string/text_balance"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        tools:text="R$ 2.000"
        android:paddingStart="10dp"
        android:background="@drawable/balance"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/balance_top"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

    <Button
        android:id="@+id/btn_extract"
        android:background="@drawable/button_extract"
        app:backgroundTint="@color/secondary"
        android:layout_width="match_parent"
        android:text="@string/btn_extract"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/view_balance"/>


      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="20dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/btn_extract">

          <androidx.recyclerview.widget.RecyclerView
              android:layout_marginTop="10dp"
              android:id="@+id/rv_function"
              tools:listitem="@layout/home_item"
              tools:itemCount="3"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

      </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>